test/libsolidity/syntaxTests/pragma/unknown_pragma.sol
pragma thisdoesntexist;
// ----
// SyntaxError 4936: (0-23='pragma thisdoesntexist;'): Unknown pragma "thisdoesntexist"
